2004-06-07  Michael Gogins <gogins@pipeline.com>

	* Changed the CsoundVST module to create a global csound instance of 
    CsoundVST.CppSound that will work both in CsoundVST and in the standalone
    Python interpreter.

2004-06-02  Michael Gogins <gogins@pipeline.com>

	* CsoundVST now opens the Python or csd file given on the command line.

2004-05-31  John ffitch  <jpff@codemist.co.uk>

	* OOps/midirecv.c: declare csoundIsExternalMidiEnabled,
	csoundExternalMidiDeviceOpen, csoundExternalMidiDeviceClose and
	OpenMIDIDevice external

	* Engine/auxfd.c (fdchclose): fd should have been curchp->fd

	* InOut/libsnd_u.c (SAsndgetset): Return a SNDFILE* rather than an int

2004-05-27  John ffitch  <jpff@codemist.co.uk>

	* InOut/widgets.cpp (fl_setWidgetValue_set, fl_setWidgetValue):
	New code stolen from CsoundAV and changed to Csound5 format

	* Engine/entry2.c: Change entry for FLsetVal

	* InOut/widgets.cpp: SNAPSHOT::get returns error state
	(get_snap): and used

2004-05-16  Michael Gogins <gogins@pipeline.com>

	* Amended SConstruct to keep a list of all dependencies to make
	sure that zipfiles get built at the very end.

	* Updated csound.pdf with information about -odac:xxx on ALSA.

2004-05-20  John ffitch  <jpff@codemist.co.uk>

	* InOut/rtpa.c (playopen_): Decode dac:xxx rather than environment
	variable 

	* InOut/libsnd.c (sfopenin, sfopenout): Decode dac:xxx style device

	* H/csoundCore.h (ENVIRON_): type in instance was wrong (missing *)

	* H/csoundCore.h (ENVIRON_): 
	* H/cs.h (rtin_devs, rtout_devs): 
	* H/csdl.h (rtin_devs, rtout_devs): 
	* Engine/oload.c: Added rtin_devs and rtout_devs for device names
	rather than just numbers

2004-05-19  John ffitch  <jpff@codemist.co.uk>

	* Engine/entry1.c: Added "tablew" as a 0xfffe opcode

	* SConstruct (customSHLINKFLAGS): Darwin seems to need -dynamic

	* Top/dl_opcodes.c (dlsymIntern): SLOOKUPSYMBOLINIMAGE_OPTION_BIND
	-> NSLOOKUPSYMBOLINIMAGE_OPTION_BIND

2004-05-18  John ffitch  <jpff@codemist.co.uk>
